/*
 * Copyright © 2017-2020 factcast.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.factcast.highlevel.projection;

import java.util.UUID;

import lombok.AccessLevel;
import lombok.Getter;
import lombok.Setter;

/**
 * Aggregates can either extend this or implement the Aggregate interface
 * themselves. What also needs to be provided for being an Aggregate is having a
 * single Argument constructor that take the Aggregate id.
 */
public abstract class Aggregate implements SnapshotProjection {

    @Getter
    @Setter(value = AccessLevel.PROTECTED)
    private UUID id;

}
