@startuml

interface Projection
interface SnapshotProjection
abstract class Aggregate


abstract class  ManagedProjection
abstract class LocalManagedProjection

interface  SubscribedProjection
abstract class LocalSubscribedProjection #gold

Projection <|-- SnapshotProjection
SnapshotProjection <|-- Aggregate


Projection <|-- ManagedProjection
ManagedProjection <|-- LocalManagedProjection

Projection <|-- SubscribedProjection
SubscribedProjection  <|-- LocalSubscribedProjection

@enduml
